--- a/sample_apps/40-EKS-NLB-Basics/02-LBC-NLB-LoadBalancer-Service.yml
+++ b/sample_apps/40-EKS-NLB-Basics/02-LBC-NLB-LoadBalancer-Service.yml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     # Traffic Routing
     service.beta.kubernetes.io/aws-load-balancer-name: basics-lbc-network-lb
-    service.beta.kubernetes.io/aws-load-balancer-type: external
+    service.beta.kubernetes.io/aws-load-balancer-type: external # it tels it will be associated with LB Controler not Legacy one
     service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: instance # specifies the target type to configure for NLB. You can choose between instance and ip
     #service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-xxxx, mySubnet ## Subnets are auto-discovered if this annotation is not specified, see Subnet Discovery for further details.
     
