--- a/sample_apps/33-EKS-Ingress-NameBasedVirtualHost-Routing/04-ALB-Ingress-HostHeader-Routing.yml
+++ b/sample_apps/33-EKS-Ingress-NameBasedVirtualHost-Routing/04-ALB-Ingress-HostHeader-Routing.yml
@@ -20,7 +20,7 @@ metadata:
     alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'   
     ## SSL Settings
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
-    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:_AWS_ACC_ID_:certificate/a5c94c17-0abe-4184-a3c2-08145ed44989
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:863772705192:certificate/a5c94c17-0abe-4184-a3c2-08145ed44989
     #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)    
     # SSL Redirect Setting
     alb.ingress.kubernetes.io/ssl-redirect: '443'
