--- a/sample_apps/41-EKS-NLB-TLS-externaldns/02-LBC-NLB-LoadBalancer-Service.yml
+++ b/sample_apps/41-EKS-NLB-TLS-externaldns/02-LBC-NLB-LoadBalancer-Service.yml
@@ -31,7 +31,7 @@ metadata:
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp 
 
     # External DNS - For creating a Record Set in Route53
-    external-dns.alpha.kubernetes.io/hostname: nlbdns101.opsdevops.test.openjawhosting.com
+    external-dns.alpha.kubernetes.io/hostname: nlbdns101.opsdevops.test.hosting.com
 spec:
   type: LoadBalancer
   selector:
