--- a/sample_apps/37-EKS-Ingress-TargetType-IP/04-ALB-Ingress-target-type-ip.yml
+++ b/sample_apps/37-EKS-Ingress-TargetType-IP/04-ALB-Ingress-target-type-ip.yml
@@ -25,7 +25,7 @@ metadata:
     # SSL Redirect Setting
     alb.ingress.kubernetes.io/ssl-redirect: '443'
     # External DNS - For creating a Record Set in Route53
-    external-dns.alpha.kubernetes.io/hostname: target-type-ip-501.opsdevops.test.hosting.com
+    external-dns.alpha.kubernetes.io/hostname: fargate-profile-demo-501.opsdevops.test.hosting.com
     # Target Type: IP (Defaults to Instance if not specified)
     alb.ingress.kubernetes.io/target-type: ip    
 spec:
