JIRA: 0000 Description: efs setup & config

--- a/infra_v5_antonP/A10-example/1-statefulset.yaml
+++ b/infra_v5_antonP/A10-example/1-statefulset.yaml
@@ -29,7 +29,8 @@ spec:
         name: data
       spec:
         accessModes: [ReadWriteOnce]
+        storageClassName: gp3-exp
         resources:
           requests:
-            storage: 8Gi
+            storage: 12Gi
 
