--- a/sample_apps/33-EKS-Ingress-NameBasedVirtualHost-Routing/01-Nginx-App1-Deployment-and-NodePortService.yml
+++ b/sample_apps/33-EKS-Ingress-NameBasedVirtualHost-Routing/01-Nginx-App1-Deployment-and-NodePortService.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: app1-nginx
 spec:
-  replicas: 4
+  replicas: 2
   selector:
     matchLabels:
       app: app1-nginx
@@ -19,6 +19,7 @@ spec:
           image: stacksimplify/kube-nginxapp1:1.0.0
           ports:
             - containerPort: 80
+          resources: {}
 ---
 apiVersion: v1
 kind: Service
