--- a/sample_apps/33-EKS-Ingress-NameBasedVirtualHost-Routing/12-IP-Nginx-App2-Deployment-and-NodePortService.yml
+++ b/sample_apps/33-EKS-Ingress-NameBasedVirtualHost-Routing/12-IP-Nginx-App2-Deployment-and-NodePortService.yml
@@ -1,42 +1,40 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app3-nginx-deployment
+  name: app2-nginx-deployment
   labels:
-    app: app3-nginx
+    app: app2-nginx 
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: app3-nginx
+      app: app2-nginx
   template:
     metadata:
       labels:
-        app: app3-nginx
+        app: app2-nginx
     spec:
       containers:
-        - name: app3-nginx
-#         image: stacksimplify/kubenginx:1.0.0
-#         image: therafk/rkapp22:1.0
-          image: therafk/rkapp11:1.0
+        - name: app2-nginx
+          image: stacksimplify/kube-nginxapp2:1.0.0
           ports:
             - containerPort: 80
-          resources: {}
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: app3-nginx-nodeport-service-xix01
+  name: app2-nginx-nodeport-service
   labels:
-    app: app3-nginx
-# annotations:
+    app: app2-nginx
+  annotations:
 #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
-#    alb.ingress.kubernetes.io/healthcheck-path: /index.html
+    alb.ingress.kubernetes.io/healthcheck-path: /app2/index.html
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
-    app: app3-nginx
+    app: app2-nginx
   ports:
     - port: 80
       targetPort: 80
 
+   
