--- a/infra_v5_antonP/A05-example/2-service.yaml
+++ b/infra_v5_antonP/A05-example/2-service.yaml
@@ -8,9 +8,12 @@ metadata:
   namespace: 5-example
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-name: no-name-here4
-    service.beta.kubernetes.io/aws-load-balancer-type: external
-    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
     service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
+    service.beta.kubernetes.io/aws-load-balancer-type: external       # use this - otherwise classic
+    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
+
+    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: Env=dev,Team=test
+
     # service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
         # if app needs client source IP otherwise LB IP is returned
 spec:
