--- a/sample_apps/29-EKS-Ingress-SSL-SSLRedirect/01-Nginx-App1-Deployment-and-NodePortService.yml
+++ b/sample_apps/29-EKS-Ingress-SSL-SSLRedirect/01-Nginx-App1-Deployment-and-NodePortService.yml
@@ -19,6 +19,7 @@ spec:
           image: stacksimplify/kube-nginxapp1:1.0.0
           ports:
             - containerPort: 80
+          resources: {}
 ---
 apiVersion: v1
 kind: Service
