--- a/sample_apps/35-EKS-Ingress-SSLDiscovery-TLS/04-ALB-Ingress-CertDiscovery-tls.yml
+++ b/sample_apps/35-EKS-Ingress-SSLDiscovery-TLS/04-ALB-Ingress-CertDiscovery-tls.yml
@@ -59,7 +59,13 @@ spec:
 
 # Important Note-1: In path based routing order is very important, if we are going to use  "/*", try to use it at the end of all rules.                                        
                         
-# 1. If  "spec.ingressClassName: my-aws-ingress-class" not specified, will reference default ingress class on this kubernetes cluster
-# 2. Default Ingress class is nothing but for which ingress class we have the annotation `ingressclass.kubernetes.io/is-default-class: "true"`
+# # Access App1
+# http://certdiscovery-tls-101.stacksimplify.com/app1/index.html
+
+# # Access App2
+# http://certdiscovery-tls-101.stacksimplify.com/app2/index.html
+
+# # Access Default App (App3)
+# http://certdiscovery-tls-101.stacksimplify.com
       
     
