--- a/sample_apps/36-EKS-Ingress-Groups/app1/01-Nginx-App1-Deployment-and-NodePortService.yml
+++ b/sample_apps/36-EKS-Ingress-Groups/app1/01-Nginx-App1-Deployment-and-NodePortService.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: app1-nginx
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: app1-nginx
@@ -30,7 +30,7 @@ metadata:
 #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
     alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
 spec:
-  type: NodePort
+  type: ClusterIP # NodePort
   selector:
     app: app1-nginx
   ports:
