--- a/sample_apps/36-EKS-Ingress-Groups/app1/02-App1-Ingress.yml
+++ b/sample_apps/36-EKS-Ingress-Groups/app1/02-App1-Ingress.yml
@@ -1,14 +1,10 @@
-# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
-#apiVersion: extensions/v1beta1
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: app1-ingress
   annotations:
-    # Load Balancer Name
-    alb.ingress.kubernetes.io/load-balancer-name: ingress-groups-demo
-    # Ingress Core Settings  
-    #kubernetes.io/ingress.class: "alb" (OLD INGRESS CLASS NOTATION - STILL WORKS BUT RECOMMENDED TO USE IngressClass Resource)
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/load-balancer-name: ingress-groups-demo     # Same across 3
     alb.ingress.kubernetes.io/scheme: internet-facing    
     # Health Check Settings
     alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
@@ -19,23 +15,18 @@ metadata:
     alb.ingress.kubernetes.io/success-codes: '200'
     alb.ingress.kubernetes.io/healthy-threshold-count: '2'
     alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
-    ## SSL Settings
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
-    #alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:180789647333:certificate/0d86500a-08b3-4f17-8fb4-f09532ba0522
-    #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)    
-    # SSL Redirect Setting
     alb.ingress.kubernetes.io/ssl-redirect: '443'
     # External DNS - For creating a Record Set in Route53
-    external-dns.alpha.kubernetes.io/hostname: ingress-groups-demo601.opsdevops.test.hosting.com
+    external-dns.alpha.kubernetes.io/hostname: ingress-groups-demo601.ops.perf.hosting.com     # Same across 3
     # Ingress Groups
-    alb.ingress.kubernetes.io/group.name: myapps.web
+    alb.ingress.kubernetes.io/group.name: myapps.web      # Same across 3
     alb.ingress.kubernetes.io/group.order: '10'
 spec:
-# ingressClassName: my-aws-ingress-class   # Ingress Class
   # SSL Certificate Discovery using TLS        
   tls:
   - hosts:
-    - "*.opsdevops.test.hosting.com"  
+    - "*.ops.perf.hosting.com"  
   rules:  
     - http:
         paths:
@@ -46,3 +37,6 @@ spec:
                 name: app1-nginx-nodeport-service
                 port: 
                   number: 80
+
+# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
+#apiVersion: extensions/v1beta1
