--- a/sample_apps/37-EKS-Ingress-TargetType-IP/01-Nginx-App1-Deployment-and-ClusterIPService.yml
+++ b/sample_apps/37-EKS-Ingress-TargetType-IP/01-Nginx-App1-Deployment-and-ClusterIPService.yml
@@ -19,6 +19,7 @@ spec:
           image: stacksimplify/kube-nginxapp1:1.0.0
           ports:
             - containerPort: 80
+          resources: {}
 ---
 apiVersion: v1
 kind: Service
