--- a/sample_apps/36-EKS-Ingress-Groups/app3/01-Nginx-App3-Deployment-and-NodePortService.yml
+++ b/sample_apps/36-EKS-Ingress-Groups/app3/01-Nginx-App3-Deployment-and-NodePortService.yml
@@ -19,6 +19,7 @@ spec:
           image: stacksimplify/kubenginx:1.0.0
           ports:
             - containerPort: 80
+          resources: {}
 ---
 apiVersion: v1
 kind: Service
