--- a/infra_v6_KalyanAanton/z1-dashboards/52-ing-argocd/7-ing-argo-workflows.yaml
+++ b/infra_v6_KalyanAanton/z1-dashboards/52-ing-argocd/7-ing-argo-workflows.yaml
@@ -24,7 +24,7 @@ metadata:
     alb.ingress.kubernetes.io/group.order: '903'
 spec:
   rules:
-  - host: workflows.ops.perf.openjawhosting.com
+  - host: workflows.ops.perf.hosting.com
     http:
       paths:
       - path: /
